# hz_csv_transformer

./: .gitignore  Cargo.toml  README.md  build.rs  main.py  parser.py  pyproject.toml  test.pickle  utils.py
csv/: CV_1.CSV  CV_2.CSV  CV_3.CSV  CV_3_demo.CSV
hv_csv_transformer/: __init__.py  utils.py
hv_csv_transformer/models/: csv_structure.py
hv_csv_transformer/my_polars/: main.py
hv_csv_transformer/parser/: __init__.py  models.py  parser.py  utils.py
hv_csv_transformer/parser/hz7000/: __init__.py  models.py  parser.py
hv_csv_transformer/plotter/: cv.py
models/: csv_structure.py
my_polars/: __init__.py  main.py
parser/: __init__.py  models.py  parser.py  slicer.py  utils.py
plotter/: __init__.py  cv.py
src/: lib.rs  submodule.rs
src/models/: csv_structure.rs  mod.rs
src/parser/: mod.rs  models.rs
