[tool.poetry]
name = "csv-transformer"
version = "0.1.1"
description = ""
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
readme = "README.md"
packages = [{include = "hv_csv_transformer"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.8"
chardet = "^5.2.0"
maya = "^0.6.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
maturin = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
