[project]
name = "csv-transformer"
description = "Add your description here"
authors = [
    { name = "kkiyama117", email = "k.kiyama117@gmail.com" }
]
dependencies = [
    "polars>=0.19.9",
    "maya>=0.6.1",
    "chardet>=5.2.0",
    "seaborn>=0.13.0",
    "maturin>=1.3.1",
]
readme = "README.md"
requires-python = ">=3.8"
#requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
#version = "0.1.0"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "PyQt5>=5.15.10",
]


[build-system]
requires = ["hatchling", "maturin>=1.3,<2.0"]
build-backend = "maturin"
#build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools>=68.2.2",
    "PyQt5>=5.15.10",
    "maturin>=1.3.1",
    "pip>=23.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.maturin]
features = ["pyo3/extension-module"]
