[project]
name = "csv-transformer"
description = "Add your description here"
authors = [
    { name = "kkiyama117", email = "k.kiyama117@gmail.com" }
]
dependencies = [
    "polars>=0.19.9",
    "maya>=0.6.1",
    "chardet>=5.2.0",
    "seaborn>=0.13.0",
    "maturin>=1.3.1",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
PyQt5 = ["PyQt5"]
all = ["csv-transformer[PyQt5]"]

[build-system]
requires = ["hatchling", "maturin>=1.3,<2.0"]
build-backend = "maturin"
#build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = [
    "setuptools>=68.2.2",
    "maturin>=1.3.1",
    "pip>=23.3.1",
    "nox>=2023.4.22",
    "pytest>=7.4.3",
    "ruff>=0.1.2",
    "PyQt5>=5.15.10",
    #    "cffi>=1.16.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.maturin]
features = ["pyo3/extension-module"]
sdist-include = ["MANIFEST.in", "README.md"]
repository = "testpypi"
#bindings = "cffi"
#compatibility = "linux"
